Bug 1195951 - fix heap type on stack error in MediaUtils' Pledge class. r=jesup